# advices-api

./: Cargo.toml  Dockerfile
.github/workflows/: aws.yml
src/: main.rs
